# hermes-feishu-cardkit

./: .gitignore  LICENSE  README.md  RELEASE-v2-cardkit.md  install.sh  pyproject.toml
examples/: basic_usage.py
patches/: run.py.patch  run_agent.py.patch
src/feishu_cardkit/: __init__.py  api.py  builder.py  cardkit_stream_consumer.py  components.py  controller.py  feishu_cardkit.py  hermes_controller.py  markdown.py
tests/: test_cardkit.py
